fixed pre wrapping for long lines

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -37,6 +37,7 @@
  // Code Snippets
  pre {
      white-space: pre-wrap;
+     word-wrap: break-word;
      font-family: 'IBM Plex Mono', monospace;
      background-color: #f7fdf3;
      
